--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/employee
 spring.datasource.username=root
 spring.datasource.password=mariadb
+
+spring.data.rest.base-path=/api
