feat: Add spring data rest config.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=mariadb
 
 spring.data.rest.base-path=/api
+spring.data.rest.default-page-size=10
