--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.data.rest.default-page-size=10
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.security.user.name=tirzasrwn
+spring.security.user.password=tirzasrwn
