--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.devtools.restart.enabled=true
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/employee
+spring.datasource.url=jdbc:mariadb://localhost:3306/employee_directory
 spring.datasource.username=root
 spring.datasource.password=mariadb
 
