--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.devtools.restart.enabled=true
 
+countries=Brazil,France,Germany,India,Mexico,Spain,United States
+languages=Go,Java,Python,Rust,TypeScript
+
