feat: Spring MVC form. Check box.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.devtools.restart.enabled=true
 
 countries=Brazil,France,Germany,India,Mexico,Spain,United States
 languages=Go,Java,Python,Rust,TypeScript
+systems=Linux,macOS,Microsoft Windows,Android OS,iOS
 
